<resources>
    <string name="app_name">Space-Time Tagger</string>
    <string name="no_sessions">No existing sessions. Add one below.</string>
    <string name="new_session">New Session</string>
    <string name="untitled">Untitled</string>
    <string name="no_tags_tap_below">No tags recorded yet. Tap below to add a tag.</string>
    <string name="no_tags_tap_anywhere">No tags recorded yet. Tap anywhere to add a tag.</string>
    <string name="add_tag">Add Tag</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="are_you_sure">Are you sure? This action cannot be undone.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="error_sessions_list">Could not load sessions, something went wrong.</string>
    <string name="error_session_detail">Could not find this session, something went wrong.</string>
    <string name="name_input">name input</string>
    <string name="back">Back</string>
    <string name="session_detail">Session Detail</string>
    <string name="settings">Settings</string>
    <string name="sessions">Sessions</string>
    <string name="capture_location">Capture Location in Tags</string>
    <string name="ok">OK</string>
    <string name="why_location_permission_is_required">If you don\'t grant precise location permission, then this app will not be able to add your current location to tags.</string>
    <string name="tag_being_added">Tag Being Added</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="tap_anywhere">Tap Anywhere to Add a Tag</string>
    <string name="session_name_strategy">Session Name Strategy</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="time_offset">Time Offset</string>
    <string name="hours_abbr">Hr.</string>
    <string name="minutes_abbr">Min.</string>
    <string name="seconds_abbr">Sec.</string>
    <string name="session_name">Session Name</string>
    <string name="clear_text">Clear Text</string>
    <string name="clear_duration">Clear Duration</string>
    <string name="dropdown_icon">dropdown icon</string>
</resources>